--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//apps/independent_system/NegationTagger.py=utf-8
 encoding//apps/independent_system/corpus_parser.py=utf-8
 encoding//apps/independent_system/corpus_parser_strategies.py=utf-8
 encoding//apps/independent_system/lexicon_evaluation.py=utf-8
